# api/handlers/v1/search.go
@@ -5,7 +5,6 @@ import (
 	"log"
 	"net/http"
 	"strconv"
-	"time"
 	"univer/api/models"
 	"univer/internal/entity"
 
@@ -22,6 +21,9 @@ import (
 // @Param 			page query int true "Page"
 // @Param 			limit query int true "Limit"
 // @Param 			theme query string true "Theme"
+// @Param           science  query string false "Science"
+// @Param           priceStatus  query bool false "Price Satatus"
+// @Param           category  query string false "Category" Enums(slayt, mustaqil ish,kurs ishi)
 // @Success 		200 {object} models.ListPost
 // @Failure 		404 {object} models.Error
 // @Failure 		401 {object} models.Error
@@ -34,19 +36,14 @@ func (h *HandlerV1) Search(c *gin.Context) {
 	)
 	jspbMarshal.UseProtoNames = true
 
-	duration, err := time.ParseDuration(h.Config.Context.Timeout)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, models.Error{
-			Message: err.Error(),
-		})
-		log.Println(err.Error())
-		return
-	}
-	ctx, cancel := context.WithTimeout(context.Background(), duration)
+	ctx, cancel := context.WithTimeout(context.Background(), h.Config.Context.Timeout)
 	defer cancel()
 	theme := c.Query("theme")
 	page := c.Query("page")
 	limit := c.Query("limit")
+	science := c.Query("science")
+	category := c.Query("category")
+	priceStatus := c.Query("priceStatus")
 	pageInt, err := strconv.Atoi(page)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, models.Error{
@@ -64,10 +61,18 @@ func (h *HandlerV1) Search(c *gin.Context) {
 		return
 	}
 
-
 	offset := (pageInt - 1) * limitInt
 	filter := map[string]string{
 		"theme": theme,
+	}
+	if science != "" {
+		filter["science"] = science
+	}
+	if category != "" {
+		filter["category_id"] = category
+	}
+	if priceStatus != "" {
+		filter["price_status"] = priceStatus
 	}
 	listPost, err := h.Service.Post().Search(ctx, &entity.ListReq{
 		Offset: offset,
